tests/valid/valid_subset_primitive.csl
config SubsetPrim {
  allowed: string[];
  selected: string[];
  constraints {
    validate subset(selected, allowed);
  };
}
