tests/invalid/invalid_function_call_missing_paren.csl
config InvalidFuncSyntax {
  a: string[];
  b: string[];
  constraints { validate subset(a, b; };
}
